# ardent_gazebo

./: CMakeLists.txt  README.md  package.xml
launch/: ardent_gazebo.launch  ardent_rviz.rviz
scripts/: traj_control_test.cpp  walking_test.cpp
